--- a/centos-8/http/centos-8-kickstart.cfg
+++ b/centos-8/http/centos-8-kickstart.cfg
@@ -34,17 +34,65 @@ clearpart --all --initlabel
 # autopart --type=lvm
 
 # Disk partitioning information
+# Using EXT4 below so we can safely shrink the partitions.
+# If we chose XFS, then we could never shrink a partition without destroying it
 part pv.157 --fstype lvmpv --ondrive=vda --size=1 --grow --asprimary
-part /boot --fstype ext4 --ondrive=vda --size=1024 --asprimary
+# Add nodev Option to /boot
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_boot_nodev
+# Add nosuid Option to /boot
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_boot_nosuid
+part /boot --fstype ext4 --ondrive=vda --size=1024 --asprimary --fsoptions="rw,nodev,nosuid"
 
 volgroup vg_centos --pesize=4096 pv.157
-logvol /opt  --fstype ext4 --size=4096 --name=lv_opt --vgname=vg_centos
+# Ensure /home Located On Separate Partition
+# rule_id = xccdf_org.ssgproject.content_rule_partition_for_home
+# Add nodev Option to /boot
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_boot_nodev
+# Add nosuid Option to /boot
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_boot_nosuid
+logvol /home  --fstype ext4 --size=1024 --name=lv_home --vgname=vg_centos --fsoptions="rw,nodev,nosuid"
+# Add nodev Option to Non-Root Local Partitions
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_nodev_nonroot_local_partitions
+logvol /opt  --fstype ext4 --size=4096 --name=lv_opt --vgname=vg_centos --fsoptions="rw,nodev"
 logvol swap  --fstype swap --size=4096 --name=lv_swap --vgname=vg_centos
-logvol /tmp  --fstype ext4 --size=4096 --name=lv_tmp --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
-logvol /var/log  --fstype ext4 --size=4096 --name=lv_var_log --vgname=vg_centos
-logvol /var/tmp  --fstype ext4 --size=4096 --name=lv_var_tmp --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
-logvol /var/lib  --fstype ext4 --size=4096 --name=lv_var_lib --vgname=vg_centos
-logvol /var/log/audit  --fstype ext4 --size=1024 --name=lv_var_log_audit --vgname=vg_centos
+# Add nosuid Option to /tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_tmp_nosuid
+# Add nodev Option to /tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_tmp_nodev
+# Add noexec Option to /tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_tmp_noexec
+logvol /tmp  --fstype ext4 --size=2048 --name=lv_tmp --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
+# Ensure /var Located On Separate Partition
+# rule_id = xccdf_org.ssgproject.content_rule_partition_for_var
+logvol /var     --fstype ext4 --size=4096 --name=lv_var --vgname=vg_centos --fsoptions="rw,nodev"
+# Add nodev Option to Non-Root Local Partitions
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_nodev_nonroot_local_partitions
+logvol /var/lib  --fstype ext4 --size=4096 --name=lv_var_lib --vgname=vg_centos --fsoptions="rw,nodev"
+# Ensure /var/log Located On Separate Partition
+# rule_id = xccdf_org.ssgproject.content_rule_partition_for_var_log
+# Add nosuid Option to /var/log
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_nosuid
+# Add nodev Option to /var/log
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_nodev
+# Add noexec Option to /var/log
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_noexec
+logvol /var/log  --fstype ext4 --size=2048 --name=lv_var_log --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
+# Ensure /var/log/audit Located On Separate Partition
+# rule_id = xccdf_org.ssgproject.content_rule_partition_for_var_log_audit
+# Add nosuid Option to /var/log/audit
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_audit_nosuid
+# Add nodev Option to /var/log/audit
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_audit_nodev
+# Add noexec Option to /var/log/audit
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_log_audit_noexec
+logvol /var/log/audit  --fstype ext4 --size=1024 --name=lv_var_log_audit --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
+# Add nosuid Option to /var/tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_tmp_nosuid
+# Add nodev Option to /var/tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_tmp_nodev
+# Add noexec Option to /var/tmp
+# rule_id = xccdf_org.ssgproject.content_rule_mount_option_var_tmp_noexec
+logvol /var/tmp  --fstype ext4 --size=2048 --name=lv_var_tmp --vgname=vg_centos --fsoptions="rw,nodev,noexec,nosuid"
 logvol /  --fstype ext4 --size=1 --grow --name=lv_root --vgname=vg_centos
 
 # Reboot after successful installation
